# colortool

./: .bumpversion.cfg  .flake8  .pre-commit-config.yaml  Makefile  README.md  colortool.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
tests/: color_test.py  colorsys_test.py  gradient_test.py  svg_test.py  test_main.py  tools_test.py
