[project]
name = "colortool"
version = "0.6.0"
authors = [
    {name = "Alexander Rodionov", email = "tandav@tandav.me"},
]
description = "set of tools to work with different color formats"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "bumpver",
    "pre-commit",
    "pytest",
]

[project.urls]
source = "https://github.com/tandav/colortool"
# docs = "https://tandav.github.io/colortool"
issues = "https://gitlab.tandav.me/tandav/notes/-/issues?label_name%5B%5D=colortool"
"release notes" = "https://github.com/tandav/colortool/releases"

# ==============================================================================

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# ==============================================================================

[tool.bumpver]
current_version = "v0.6.0"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{pep440_version}"',
    '^current_version = "{version}"',
]
"colortool.py" = [
    "^__version__ = '{pep440_version}'",
]

# ==============================================================================

[tool.mypy]
# todo: review this
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# ==============================================================================

[tool.ruff]
select = ["ALL"]
ignore = [
    "E501",  # line too long
    "E731", # lambda assignment
    "E701", # multiple statements
    "E702", # multiple statements
    "F403", # star imports
    "F405", # star imports
    "B008", # function-call-in-default-argument
    "PLR0913", # too-many-arguments
    "TCH003", # typing-only-standard-library-import
    "ANN", # type annotations
    "D", #docstrings
    "Q", # quotes
    "PLR2004",
    "ARG005", # Unused lambda argument
    "PTH123", # `open()` should be replaced by `Path.open()`
    "TRY003",
    "EM101",
    "E741",
    "A003",
    "UP006",
    "PT001",
    "S311",
    "SLF001",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "PT011", "B018"]

[tool.ruff.isort]
force-single-line = true

# ==============================================================================

[tool.pylint.MASTER]
load-plugins=[
    "pylint_per_file_ignores",
]

[tool.pylint.messages-control]
disable = [
    "invalid-name",
    "import-error",
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring",
    "unnecessary-lambda-assignment",
    "multiple-statements",
    "line-too-long",
    "unspecified-encoding",
    "wildcard-import",
    "unused-wildcard-import",
    "keyword-arg-before-vararg",
    "too-few-public-methods",
    "too-many-public-methods",
    "too-many-arguments",
    "redefined-builtin",
    "pointless-statement",
    "protected-access",
]

[tool.pylint-per-file-ignores]
"/tests/" = "import-error,redefined-outer-name"

# ==============================================================================

[tool.autopep8]
ignore="E501,E701"
recursive = true
aggressive = 3

# ==============================================================================

[tool.flake8]
ignore = [
    'E501',
    'E741',
]

# ==============================================================================
