[metadata]
name = colortool
version = 0.0.7
description = set of tools to work with different color formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tandav/colortool
author = Alexander Rodionov
author_email = tandav@tandav.me

[options]
py_modules = colortool
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
