[metadata]
name = colortool
version = 0.1.0
description = set of tools to work with different color formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tandav/colortool
author = Alexander Rodionov
author_email = tandav@tandav.me

[options]
py_modules = colortool
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev =
    autoflake
    autopep8
    bumpver
    flake8
    isort
    mypy
    pre-commit
    pytest

[bumpver]
current_version = "v0.1.0"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = True
tag = True

[bumpver:file_patterns]
setup.cfg =
    version = {pep440_version}
    current_version = "{version}"
colortool.py =
    __version__ = '{pep440_version}'

[flake8]
ignore = E741
max-line-length = 200
max-complexity = 10
recursive = true
aggressive = 3
jobs = 8


[isort]
line_length = 120
include_trailing_comma = true
force_single_line = true
indent = 4


[mypy]
python_version = 3.10
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
